# markdown-rs

./: Cargo.toml  README.md  index.html
.circleci/: config.yml
js/: index.js
src/: bench.rs  block.rs  html_translator.rs  inline_parser.rs  lib.rs  markdown.pest  tests.rs  translator.rs  tree.rs
src/block_parser/: block.pest  mod.rs  parser.rs  tree.rs
src/html_translator/: mod.rs  parser.rs
src/inline_parser/: inline.pest  interpreter.rs  lexer.rs  mod.rs
