[package]
name = "markdown"
version = "0.1.0"
authors = ["ykonomi <hgKaguyaToupako4er@gmail.com>"]
repository = "https://github.com/ykonomi/markdown-rs"

[dependencies]
pest = "^1.0"
pest_derive = "^1.0"
htmlescape-plus = { git = "https://github.com/ykonomi/rust-htmlescape.git" }

[lib]
name = "markdown"
doctest = false
crate-type = ["cdylib"]
