[package]
name = "markdown"
version = "0.1.1"
authors = ["ykonomi <hgKaguyaToupako4er@gmail.com>"]
repository = "https://github.com/ykonomi/markdown-rs"

[dependencies]
pest = "2.0.1"
pest_derive = "2.0.1"
htmlescape-plus = { git = "https://github.com/ykonomi/rust-htmlescape.git" }

[lib]
name = "markdown"
crate-type = ["cdylib"]
